--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,4 +13,161 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+/* add input style */
+
+.input-container {
+  background-color: white;
+  margin-top: 2rem;
+  border-radius: 0.25rem;
+  padding: 1rem;
+  box-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.329);
+  display: flex;
+  justify-content: space-between;
+}
+
+.input {
+  border: none;
+  width: 90%;
+}
+
+.input:focus {
+  outline: none;
+}
+
+.add-btn {
+  border: none;
+  padding: 0.3rem 2rem;
+  border-radius: 0.2rem;
+  background-color: rgb(53, 201, 157);
+  color: white;
+  font-weight: 900;
+}
+
+/* heder style */
+
+.header {
+  color: white;
+  letter-spacing: 1rem;
+  text-transform: uppercase;
+  font-size: 5rem;
+  text-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.342);
+}
+
+/* todo style */
+
+.todo {
+  margin-top: -22.5vh;
+}
+
+/* todo foter style */
+
+.todo-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.todo-footer p {
+  font-weight: 600;
+  color: grey;
+}
+
+.todo-footer a {
+  font-weight: 600;
+  color: grey;
+  text-decoration: none;
+}
+
+/* todo list style */
+
+.todolist-container {
+  background-color: white;
+  margin-top: 2rem;
+  border-radius: 0.25rem;
+  padding: 1rem;
+  box-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.329);
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.todos-container {
+  overflow: auto;
+  height: 90%;
+}
+
+.todo-item {
+  border-bottom: 0.05rem solid rgba(0, 0, 0, 0.082);
+  padding: 1rem 0;
+  cursor: pointer;
+}
+
+.todo-item-active {
+  text-decoration: line-through;
+  color: grey;
+}
+
+/* banner style  */
+
+.banner {
+  height: 35vh;
+  background-image: linear-gradient(
+      to right,
+      rgba(54, 214, 62, 0.794),
+      rgba(53, 201, 157, 0.794),
+      rgba(32, 155, 212, 0.794)
+    ),
+    url("../public/mountain.jpg");
+  background-position: center;
+}
+
+.banner-img {
+  height: 100%;
+  width: 100%;
+}
+
+/* followers component */
+
+.followers {
+  margin-top: -22.5vh;
+}
+
+/* followers list component */
+
+.followerslist-container {
+  background-color: white;
+  margin-top: 2rem;
+  border-radius: 0.25rem;
+  padding: 1rem;
+  box-shadow: 0.1rem 0.1rem 1rem rgba(0, 0, 0, 0.329);
+  height: 50vh;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.follower-item {
+  display: flex;
+  padding: 1rem 0;
+  border-bottom: 0.05rem solid rgba(0, 0, 0, 0.082);
+  padding: 1rem 0;
+}
+.followers-details {
+  margin-left: 1.25rem;
+}
+
+.follower-item-name {
+  display: flex;
+}
+
+.follower-item-name h4 {
+  margin-right: 0.5rem;
+}
+
+.follower-item img {
+  border-radius: 50%;
+  width: 4rem;
 }
